fixed landing page text on mobile devices

--- a/front-end/src/Components/LandingPage/LandingComponent.scss
+++ b/front-end/src/Components/LandingPage/LandingComponent.scss
@@ -28,6 +28,14 @@
     @media screen and (max-width: 414px) {
         /* Styles for screens up to 768px wide */
         min-width: 414px;
+
+        .landingComponent {
+            &__heading {
+                &__text {
+                    font-size: 32px;
+                }
+            }
+        }
       }
 }
 
